Allow reflection access to closed methods within java.base in test cases for jdk9+
GitOrigin-RevId: a3d265acc8089b8c3aebf6f0f7fb87a9445471ed